<resources>
    <string name="app_name">Labour Management</string>
    <string name="your_credentials_nenter_the_missing_fields">Your Credentials  <b>Enter The Missing Fields</b></string>
    <string name="didn_t_get_otp_resend">Did not get OTP? <b>Resend</b></string>
    <string name="want_to_sign_up_with_phone_no">Want to Sign Up with <b>Phone No</b></string>
    <string name="forgot_password_recover">Forgot Password? <b>Recover</b></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_a_new_account">Create a new account !!!</string>
    <string name="signup_as_a_skilled_laborer">SignUp As A Skilled Laborer</string>
    <string name="full_name">Full Name</string>
    <string name="your_expertise_in">Your Expertise in...</string>
    <string name="your_working_area">Your Working Area...</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="phone_number_can_be_empty">Phone Number(can be empty)</string>
    <string name="your_address">Your Address</string>
    <string name="your_company_address">Your Company Address...</string>
    <string name="sign_up_as_a_laborer"><b>Sign Up</b> As a laborer</string>
    <string name="sign_up_as_a_homeowner"><b>Sign Up</b> As a Home Owner</string>
    <string name="sign_up_as_a_company"><b>Sign Up</b> As a Company</string>
</resources>