<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".SignUpActivity2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_as_a_homeowner"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Headline4"/>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_account"
            android:textAlignment="center"
            style="@style/TextAppearance.MaterialComponents.Headline5"/>


        <ImageView
            android:id="@+id/imageIv"
            android:layout_width="wrap_content"
            android:layout_height="178dp"
            android:src="@drawable/builder" />
        <!--Name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTitle"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="textPersonName">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <!--Phone-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneTitle"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/phoneEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_can_be_empty"
                android:inputType="number">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AddressTitle"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/addressEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_working_area"
                android:inputType="textMultiLine">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Age-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/AgeTitle"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/AgeEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age"
                android:inputType="number">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTitle"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/emailEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTitle"
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/passwordEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>


        <!--Login Button-->
        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:text="SignUp"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"/>



    </LinearLayout>
</ScrollView>