<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Headline4"/>

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLabel"
        android:text="Login to your existing account"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Caption"/>

    <ImageView
        android:layout_below="@+id/descriptionLabel"
        android:layout_width="250dp"
        android:layout_height="180dp"
        android:src="@drawable/builder"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTitle"
        android:layout_above="@+id/passwordTitle"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTitle"
        app:passwordToggleEnabled="true"
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:inputType="textPassword">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Login Button-->
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:text="Login"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/passwordTitle"
        android:layout_height="wrap_content"/>

    <com.google.android.gms.common.SignInButton
        android:layout_height="wrap_content"
        android:id="@+id/googleSignIn"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/forgotPassword">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:layout_below="@id/loginBtn"
        android:id="@+id/forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_recover"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        style="@style/TextAppearance.MaterialComponents.Caption">
    </TextView>


    <TextView
        android:layout_above="@+id/haveAccountHomeOwner"
        android:id="@+id/haveAccountLaborer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_as_a_laborer"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        style="@style/TextAppearance.MaterialComponents.Caption">
    </TextView>
    <TextView
        android:layout_above="@+id/haveAccountCompany"
        android:id="@+id/haveAccountHomeOwner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_as_a_homeowner"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        style="@style/TextAppearance.MaterialComponents.Caption">
    </TextView>
    <TextView
        android:layout_above="@+id/otpVerification"
        android:id="@+id/haveAccountCompany"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_as_a_company"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        style="@style/TextAppearance.MaterialComponents.Caption">
    </TextView>


    <TextView
        android:id="@+id/otpVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:text="@string/want_to_sign_up_with_phone_no"
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        style="@style/TextAppearance.MaterialComponents.Caption">
    </TextView>
</RelativeLayout>